# nn-vs-if-else

./: .gitignore  pyproject.toml
src/nn_vs_if_else/: main.py
src/nn_vs_if_else/sumo_project/: test.net.xml  test.rou.xml  test.sumocfg
